# uqcsbot-discord

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  deploy.sh  docker-compose.yml  launch-dev.ps1  launch-dev.sh  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: black.yml  build-docker.yml  main.yml  run-black.yml  run-tests.yml  setup-python.yml  tests.yml  typecheck.yml
.github/workflows/setup-python/: action.yml
dev/: cli.py
tests/: test_haiku.py  test_whatweekisit.py
tests/testfiles/: test_advent.json  test_whatweekisit.html
unimplemented/: emoji_log.py  morse.py
uqcsbot/: __init__.py  __main__.py  advent.py  adventure.py  alfred.py  basic.py  bot.py  cat.py  channels.py  cog.py  course_ecp.py  cowsay.py  dominos.py  dominos_coupons.py  error_handler.py  events.py  gaming.py  hackathon.py  haiku.py  holidays.py  hoogle.py  intros.py  jobs_bulletin.py  jobs_bullitin.py  join.py  latex.py  leet.py  manage_cogs.py  member_counter.py  minecraft.py  models.py  morse.py  past_exams.py  phonetics.py  poll.py  remindme.py  repos.py  secats.py  snailrace.py  starboard.py  (+9 more)
uqcsbot/static/: academic_calendar.html  geek_holidays.csv  syllable_rules.yaml
uqcsbot/utils/: advent_utils.py  command_utils.py  dominos_utils.py  err_log_utils.py  seminar_utils.py  snailrace_utils.py  uq_course_utils.py  whatweekisit_utils.py
