[tool.poetry]
name = "uqcsbot"
version = "0.1.0"
description = "UQCSbot is a chat bot built in Python for the UQCS Discord server."
authors = ["UQ Computing Society <contact@uqcs.org.au>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
"discord.py" = "^2.2.3"
icalendar = "^5.0"
"python-dateutil" = "^2.8"
pytz = "^2023.3"
requests = "^2.28"
beautifulsoup4 = "^4.12"
APScheduler = "^3.10"
SQLAlchemy = {version = "^2.0.12", extras = ["postgresql_psycopg2binary"]}
humanize = "^4.3"
aiohttp = "^3.8"
aio-mc-rcon = "^3.2.0"
PyYAML = "^6.0"

[tool.poetry.scripts]
botdev = "dev.cli:main"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
pytest-datafiles = "^3.0.0"
python-dotenv = "^1.0.0"
black = "^23.3.0"
pyright = "^1.1.316"
types-requests = "^2.30.0.0"
types-beautifulsoup4 = "^4.12.0.4"
types-python-dateutil = "^2.8.19.12"
types-pytz = "^2023.3.0.0"

[build-system]
requires = ["poetry-core>=1.3.0"]
build-backend = "poetry.core.masonry.api"

[tool.pyright]
strict = ["**"]
exclude = [
    "**/advent.py",
    "**/bot.py",
    "**/error_handler.py",
    "**/events.py",
    "**/gaming.py",
    "**/haiku.py",
    "**/member_counter.py",
    "**/remindme.py",
    "**/snailrace.py",
    "**/starboard.py",
    "**/uptime.py",
    "**/whatsdue.py",
    "**/working_on.py",
    "**/utils/command_utils.py",
    "**/utils/snailrace_utils.py",
    "**/utils/uq_course_utils.py"
]