[tool.poetry]
name = "uqcsbot"
version = "0.1.0"
description = "UQCSbot is a chat bot built in Python for the UQCS Discord server."
authors = ["UQ Computing Society <contact@uqcs.org.au>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
"discord.py" = "^2.3.2"
icalendar = "^5.0"
"python-dateutil" = "^2.9"
requests = "^2.31"
beautifulsoup4 = "^4.12"
APScheduler = "^3.10"
SQLAlchemy = {version = "^2.0.28", extras = ["postgresql_psycopg2binary"]}
humanize = "^4.9"
aiohttp = "^3.9"
aio-mc-rcon = "^3.2.0"
PyYAML = "^6.0"
mcstatus = "^11.1.0"
pillow = "^11.0.0"
tzdata = "*"

[tool.poetry.scripts]
botdev = "dev.cli:main"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
pytest-datafiles = "^3.0.0"
python-dotenv = "^1.0.0"
black = "^23.12.0"
pyright = "^1.1.316"
types-requests = "^2.30.0.0"
types-beautifulsoup4 = "^4.12.0.4"
types-python-dateutil = "^2.8.19.12"
types-pytz = "^2023.3.0.0"

[build-system]
requires = ["poetry-core>=1.3.0"]
build-backend = "poetry.core.masonry.api"

[tool.pyright]
strict = ["**"]
exclude = [
    "**/bot.py",
    "**/events.py",
    "**/gaming.py",
    "**/remindme.py",
    "**/snailrace.py",
    "**/starboard.py",
    "**/utils/snailrace_utils.py",
]

