[project]
name = "uqcsbot"
version = "0.1.0"
description = "UQCSbot is a chat bot built in Python for the UQCS Discord server."
authors = [{name = "UQ Computing Society", email = "contact@uqcs.org"}]
license = "MIT"

[project.scripts]
botdev = "dev.cli:main"

[tool.poetry]
package-mode = false
requires-poetry = ">=2.0"

[tool.poetry.dependencies]
python = "^3.13"
"discord.py" = "^2.7.1"
icalendar = "^7.1.1"
"python-dateutil" = "^2.9"
requests = "^2.34.2"
beautifulsoup4 = "^4.14.3"
APScheduler = "^3.11.2"
SQLAlchemy = {version = "^2.0.49", extras = ["postgresql_psycopg2binary"]}
humanize = "^4.15"
aiohttp = "^3.14.1"
aio-mc-rcon = "^3.4.2"
PyYAML = "^6.0"
mcstatus = "^11.1.0"
pillow = "^12.0.0"
tzdata = "*"
pytz = "^2026.2"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.3"
pytest-datafiles = "^3.0.0"
python-dotenv = "^1.0.0"
black = "^26.5.1"
pyright = "^1.1.409"
types-requests = "^2.33.0.0"
types-beautifulsoup4 = "^4.12.0.4"
types-python-dateutil = "^2.8.19.12"
types-pytz = "^2026.2.0.0"

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pyright]
strict = ["**"]
exclude = [
    "**/bot.py",
    "**/events.py",
    "**/gaming.py",
    "**/remindme.py",
    "**/snailrace.py",
    "**/starboard.py",
    "**/uptime.py",
    "**/working_on.py",
    "**/utils/command_utils.py",
    "**/utils/snailrace_utils.py",
]

